remove List.of and use single ImmutableMap for MemoryLocation IDs in MemoryModelTest